--- a/docs/api/qiskit-ibm-transpiler/0.7/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.7/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
@@ -1,6 +1,6 @@
 ---
-title: AILinearFunctionSynthesis (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis in the latest version of qiskit-ibm-transpiler
+title: AILinearFunctionSynthesis (v0.7)
+description: API reference for qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis in qiskit-ibm-transpiler v0.7
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
 # AILinearFunctionSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L180-L219" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.7/qiskit_ibm_transpiler/ai/synthesis.py#L177-L216" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
   Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.
@@ -53,7 +53,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L114-L131" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.7/qiskit_ibm_transpiler/ai/synthesis.py#L111-L128" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -67,7 +67,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L72-L112" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.7/qiskit_ibm_transpiler/ai/synthesis.py#L69-L109" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
