--- a/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.ai.AICliffordSynthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.ai.AICliffordSynthesis.mdx
@@ -1,6 +1,6 @@
 ---
-title: AICliffordSynthesis (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AICliffordSynthesis in the latest version of qiskit-ibm-transpiler
+title: AICliffordSynthesis (v0.8)
+description: API reference for qiskit_ibm_transpiler.ai.AICliffordSynthesis in qiskit-ibm-transpiler v0.8
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
 # AICliffordSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AICliffordSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L206-L257" signature="qiskit_ibm_transpiler.ai.AICliffordSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AICliffordSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L134-L177" signature="qiskit_ibm_transpiler.ai.AICliffordSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
   Synthesis for Clifford circuits (blocks of H, S and CX gates). Currently up to 9 qubit blocks.
@@ -53,7 +53,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L186-L203" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L114-L131" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -67,7 +67,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L139-L184" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L72-L112" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
