--- a/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
@@ -1,21 +1,21 @@
 ---
-title: AICliffordSynthesis (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AICliffordSynthesis in the latest version of qiskit-ibm-transpiler
+title: AILinearFunctionSynthesis (v0.8)
+description: API reference for qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis in qiskit-ibm-transpiler v0.8
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
+python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 ---
 
-# AICliffordSynthesis
+# AILinearFunctionSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AICliffordSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L206-L257" signature="qiskit_ibm_transpiler.ai.AICliffordSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L180-L219" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
-  Synthesis for Clifford circuits (blocks of H, S and CX gates). Currently up to 9 qubit blocks.
+  Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.
 
   **Parameters**
 
-  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Name of the backend used for doing the AI Clifford synthesis.
+  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Name of the backend used for doing the AI Linear Function synthesis.
   *   **replace\_only\_if\_better** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Determine if replace the original circuit with the synthesized one if it’s better, defaults to True.
   *   **max\_threads** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the number of requests to send in parallel.
 
@@ -23,7 +23,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### execute
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
@@ -43,7 +43,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### name
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -53,7 +53,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L186-L203" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L114-L131" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -67,11 +67,11 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L139-L184" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/synthesis.py#L72-L112" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
