--- a/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.ai.CollectLinearFunctions.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.ai.CollectLinearFunctions.mdx
@@ -1,23 +1,23 @@
 ---
-title: CollectPermutations (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.CollectPermutations in the latest version of qiskit-ibm-transpiler
+title: CollectLinearFunctions (v0.8)
+description: API reference for qiskit_ibm_transpiler.ai.CollectLinearFunctions in qiskit-ibm-transpiler v0.8
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
+python_api_name: qiskit_ibm_transpiler.ai.CollectLinearFunctions
 ---
 
-# CollectPermutations
+# CollectLinearFunctions
 
-<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/collection.py#L341-L378" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectLinearFunctions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/collection.py#L301-L338" signature="qiskit_ibm_transpiler.ai.CollectLinearFunctions(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = LINEAR_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
-  Collects blocks of SWAP circuits as Permutations.
+  Collects blocks of SWAP and CX as LinearFunction objects and stores the original sub-circuit to compare against it after synthesis.
 
   **Parameters**
 
   *   **do\_commutative\_analysis** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Enable or disable commutative analysis, defaults to True
-  *   **min\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the minimum size for blocks generated during the collect permutations pass, defaults to 4.
-  *   **max\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the maximum size for blocks generated during the collect permutations pass, defaults to 12.
+  *   **min\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the minimum size for blocks generated during the collect linear functions pass, defaults to 4.
+  *   **max\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the maximum size for blocks generated during the collect linear functions pass, defaults to 9.
   *   **collect\_from\_back** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Specify if collect blocks in reverse order or not, defaults to False.
   *   **num\_reps** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Specify how many times to repeat the optimization process, defaults to 10.
 
@@ -25,7 +25,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### execute
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
@@ -45,7 +45,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### name
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -55,7 +55,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/collection.py#L234-L258" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/ai/collection.py#L234-L258" signature="run(dag)">
     Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit
 
     **Returns**
@@ -69,7 +69,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### update\_status
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
