--- a/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.8/qiskit_ibm_transpiler.transpiler_service.TranspilerService.mdx
@@ -1,6 +1,6 @@
 ---
-title: TranspilerService (latest version)
-description: API reference for qiskit_ibm_transpiler.transpiler_service.TranspilerService in the latest version of qiskit-ibm-transpiler
+title: TranspilerService (v0.8)
+description: API reference for qiskit_ibm_transpiler.transpiler_service.TranspilerService in qiskit-ibm-transpiler v0.8
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
 
 # TranspilerService
 
-<Class id="qiskit_ibm_transpiler.transpiler_service.TranspilerService" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/transpiler_service.py#L42-L127" signature="qiskit_ibm_transpiler.transpiler_service.TranspilerService(optimization_level, ai='true', coupling_map=None, backend_name=None, qiskit_transpile_options=None, ai_layout_mode=None, optimization_preferences=None, use_fractional_gates=False, **kwargs)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.transpiler_service.TranspilerService" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/transpiler_service.py#L42-L127" signature="qiskit_ibm_transpiler.transpiler_service.TranspilerService(optimization_level, ai='true', coupling_map=None, backend_name=None, qiskit_transpile_options=None, ai_layout_mode=None, optimization_preferences=None, use_fractional_gates=False, **kwargs)" modifiers="class">
   Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")
 
   Class for using the transpiler service.
@@ -28,7 +28,7 @@ python_api_name: qiskit_ibm_transpiler.transpiler_service.TranspilerService
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.transpiler_service.TranspilerService.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/transpiler_service.py#L97-L127" signature="run(circuits)">
+  <Function id="qiskit_ibm_transpiler.transpiler_service.TranspilerService.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.8/qiskit_ibm_transpiler/transpiler_service.py#L97-L127" signature="run(circuits)">
     Transpile the circuit(s) by calling the service /transpile endpoint.
 
     **Parameters**
