--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -105,6 +105,8 @@ Scroll to see the full table.
 |                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                         | `'auto'`                    |                      |
 |                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                      | `'auto'`                    |                      |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |                      |
+| experimental         |                          |                         |                           |                        |                    |
+|                      | execution_path           |                         | `gen3-turbo` *([see note](#experimental-option-note))*            | None                   |                    |
   </TabItem>
 
   <TabItem value="Sampler" label="Sampler">
@@ -135,11 +137,16 @@ Scroll to see the full table.
 |                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                        | `'auto'`                    |                    |
 |                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                        | `'auto'`                    |                    |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                        | `'active-accum'`            |                    |
+| experimental         |                          |                         |                           |                        |                    |
+|                      | execution_path           |                         | `gen3-turbo` *([see note](#experimental-option-note))*               | None                   |                    |
 
   </TabItem>
 </Tabs>
 
-
+<span id="experimental-option-note"></span>
+<Admonition type="note">
+Setting `gen3-turbo` enables the next-generation execution path, which provides a great improvement in performance. This option is experimental (subject to change without notice, and stability is not guaranteed) and is only available on `ibm_torino`.
+</Admonition>
 <span id="options-compatibility-table"></span>
 ### Options compatibility
 
@@ -200,6 +207,13 @@ Due to differences in the device compilation process, certain runtime features c
   Compatible with all other features, with the following conditions:
   - Can be used with dynamic circuits with non-conditional gates.
   - Can be used with pulse gates, but it does not work with non-Clifford entanglers.
+
+  </TabItem>
+  <TabItem value="gen3-turbo" label="gen3-turbo">
+  Incompatible with:
+  - Dynamic circuits
+  - `meas_type=kerneled` or `meas_type=avg_kerneled`
+  - Fractional gates
 
   </TabItem>
 
