--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -841,7 +841,7 @@
  "metadata": {
   "description": "This Qiskit Function for quantum chemistry calculation uses the QSCI algorithm and provides ground state energy estimation.",
   "kernelspec": {
-   "display_name": "qiskit_function",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -855,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3"
   },
   "title": "QURI Chemistry - A Qiskit Function by QunaSys"
  },
